@@ -9,6 +9,7 @@ Bugfixes:
 crash in edgecases
 * Ensure that clang21 works properly with clazy and produces same line/letter
 number as before (mismatches with operator calls)
+* non-pod-global-static: Fix false positive with Q_IMPORT_PLUGIN in Qt-6.10
 
 Features:
 * Clazy can finally be integrated into clang-tidy - one command to rule
